--- a/controller/config/crd/bases/core.kalm.dev_componentpluginbindings.yaml
+++ b/controller/config/crd/bases/core.kalm.dev_componentpluginbindings.yaml
@@ -67,6 +67,7 @@ spec:
               type: boolean
             pluginName:
               description: which plugin to use
+              minLength: 1
               type: string
           required:
           - pluginName
