--- a/controller/config/crd/bases/core.kalm.dev_componentplugins.yaml
+++ b/controller/config/crd/bases/core.kalm.dev_componentplugins.yaml
@@ -63,6 +63,7 @@ spec:
               type: string
             src:
               description: source code of the plugin
+              minLength: 1
               type: string
           required:
           - src
