--- a/controller/config/crd/bases/core.kalm.dev_httpscertissuers.yaml
+++ b/controller/config/crd/bases/core.kalm.dev_httpscertissuers.yaml
@@ -39,8 +39,10 @@ spec:
             acmeCloudFlare:
               properties:
                 apiTokenSecretName:
+                  minLength: 1
                   type: string
                 email:
+                  minLength: 1
                   type: string
               required:
               - apiTokenSecretName
