--- a/controller/config/crd/bases/core.kalm.dev_httpscerts.yaml
+++ b/controller/config/crd/bases/core.kalm.dev_httpscerts.yaml
@@ -46,6 +46,7 @@ spec:
             domains:
               items:
                 type: string
+              minItems: 1
               type: array
             httpsCertIssuer:
               type: string
