--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,7 +44,7 @@ jobs:
       - run: cd api
       - run:
           name: Build Docker image
-          command: docker build -t $IMAGE_NAME:latest .
+          command: docker build -t $IMAGE_NAME:kalm-sso-authentication .
       - run:
           name: Archive Docker image
           command: docker save -o image.tar $IMAGE_NAME
@@ -68,7 +68,7 @@ jobs:
           name: Publish Docker Image to Docker Hub
           command: |
             echo "$QUAYIO_PASS" | docker login -u "$QUAYIO_USERNAME" --password-stdin quay.io
-            docker push $IMAGE_NAME:latest
+            docker push $IMAGE_NAME:kalm-sso-authentication
   test-controller:
     docker:
       - image: circleci/golang:1.13.11
@@ -110,13 +110,13 @@ jobs:
       - run:
           name: Build Docker image
           working_directory: ./controller
-          command: docker build -t $IMAGE_NAME:latest .
+          command: docker build -t $IMAGE_NAME:kalm-sso-authentication .
       - run:
           name: Publish Docker Image to Docker Hub
           working_directory: ./controller
           command: |
             echo "$QUAYIO_PASS" | docker login -u "$QUAYIO_USERNAME" --password-stdin quay.io
-            docker push $IMAGE_NAME:latest
+            docker push $IMAGE_NAME:kalm-sso-authentication
   build-push-operator-image:
     environment:
       IMAGE_NAME: quay.io/kalmhq/kalm-operator
@@ -132,13 +132,13 @@ jobs:
       - run:
           name: Build Docker image
           working_directory: ./operator
-          command: docker build -t $IMAGE_NAME:latest .
+          command: docker build -t $IMAGE_NAME:kalm-sso-authentication .
       - run:
           name: Publish Docker Image to Docker Hub
           working_directory: ./operator
           command: |
             echo "$QUAYIO_PASS" | docker login -u "$QUAYIO_USERNAME" --password-stdin quay.io
-            docker push $IMAGE_NAME:latest
+            docker push $IMAGE_NAME:kalm-sso-authentication
   deploy-dashboard:
     executor: deploy-orb/default
     steps:
@@ -147,7 +147,7 @@ jobs:
           KALM_DEPLOY_KEY: $DEPLOY_KEY
           KALM_APP: kalm-system
           KALM_COMPONENT: kalm
-          KALM_COMPONENT_IMG_TAG: latest
+          KALM_COMPONENT_IMG_TAG: kalm-sso-authentication
   deploy-auth-proxy:
     executor: deploy-orb/default
     steps:
@@ -156,10 +156,10 @@ jobs:
           KALM_DEPLOY_KEY: $DEPLOY_KEY
           KALM_APP: kalm-system
           KALM_COMPONENT: auth-proxy
-          KALM_COMPONENT_IMG_TAG: latest
+          KALM_COMPONENT_IMG_TAG: kalm-sso-authentication
   deploy-controller:
     environment:
-      IMAGE_NAME: quay.io/kalmhq/kalm-controller:latest
+      IMAGE_NAME: quay.io/kalmhq/kalm-controller:kalm-sso-authentication
     docker:
       - image: circleci/golang:1.13.11
     steps:
@@ -177,7 +177,7 @@ jobs:
             kubectl -n kalm-system patch deployment kalm-controller -p "{\"spec\":{\"template\":{\"metadata\":{\"labels\":{\"date\":\"`date +'%s'`\"}}}}}"
   deploy-operator:
     environment:
-      IMAGE_NAME: quay.io/kalmhq/kalm-operator:latest
+      IMAGE_NAME: quay.io/kalmhq/kalm-operator:kalm-sso-authentication
     docker:
       - image: circleci/golang:1.13.11
     steps:
@@ -202,7 +202,7 @@ workflows:
           filters:
             branches:
               only:
-                - master
+                - kalm-sso-authentication
                 - orb
       - push-dashboard-image:
           context: kalm-ci
@@ -212,7 +212,7 @@ workflows:
           filters:
             branches:
               only:
-                - master
+                - kalm-sso-authentication
                 - orb
       - deploy-dashboard:
           context: deploy-demo-cluster
@@ -221,7 +221,7 @@ workflows:
           filters:
             branches:
               only:
-                - master
+                - kalm-sso-authentication
       - deploy-auth-proxy:
           context: deploy-demo-cluster
           requires:
@@ -229,7 +229,7 @@ workflows:
           filters:
             branches:
               only:
-                - master
+                - kalm-sso-authentication
   controller:
     jobs:
       - test-controller
@@ -239,25 +239,25 @@ workflows:
             - test-controller
           filters:
             branches:
-              only: master
+              only: kalm-sso-authentication
       - deploy-controller:
           context: deploy-demo-cluster
           requires:
             - build-push-controller-image
           filters:
             branches:
-              only: master
+              only: kalm-sso-authentication
   operator:
     jobs:
       - build-push-operator-image:
           context: kalm-ci
           filters:
             branches:
-              only: master
+              only: kalm-sso-authentication
       - deploy-operator:
           context: deploy-demo-cluster
           requires:
             - build-push-operator-image
           filters:
             branches:
-              only: master
+              only: kalm-sso-authentication
