eject react-scripts & config alias @apiType to reduce mock data from main js

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -15,7 +15,10 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react",
-    "baseUrl": "./src"
+    "baseUrl": "./src",
+    "paths": {
+      "@apiType/*": ["api/mockApi/*", "api/realApi/*"]
+    }
   },
   "include": ["src"]
 }
