--- a/controller/config/rbac/role_binding.yaml
+++ b/controller/config/rbac/role_binding.yaml
@@ -31,7 +31,7 @@ metadata:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: admin
+  name: cluster-admin
 subjects:
   - kind: ServiceAccount
     name: default
