react-app-rewired config webpack split mock data

--- a/frontend/tsconfig.paths.json
+++ b/frontend/tsconfig.paths.json
@@ -1,12 +1,7 @@
 {
-  "extends": "./tsconfig.paths.json",
   "compilerOptions": {
     "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -20,9 +15,10 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react",
-    "baseUrl": "./src"
+    "baseUrl": "./src",
+    "paths": {
+      "@apiType/*": ["api/mockApi/*", "api/realApi/*"]
+    }
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src"]
 }
