--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "chart.js": "^2.9.3",
     "connected-react-router": "^6.8.0",
     "copy-to-clipboard": "^3.3.1",
+    "customize-cra": "^1.0.0",
     "date-fns": "^2.11.1",
     "debug": "^4.1.1",
     "driver.js": "^0.9.8",
@@ -54,6 +55,7 @@
     "qs": "^6.9.4",
     "react": "^16.12.0",
     "react-ace": "^8.0.0",
+    "react-app-rewired": "^2.1.6",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
@@ -75,26 +77,23 @@
     "yaml": "^1.7.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject",
     "lint": "eslint -c .eslintrc.json --ext tx,tsx src --max-warnings 0",
     "storybook-dev": "NODE_ENV=test start-storybook -p 9009 -s public",
     "storybook": "NODE_ENV=test start-storybook --docs -p 9009 -s public",
     "build-storybook": "NODE_ENV=test build-storybook --docs -s public"
   },
   "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "production": [">0.2%", "not dead", "not op_mini all"],
+    "development": ["last 1 chrome version", "last 1 firefox version", "last 1 safari version"]
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "^@apiType(.*)$": "<rootDir>/src/api/mockApi$1"
+    }
   },
   "devDependencies": {
     "@storybook/addon-a11y": "^5.3.19",
@@ -122,7 +121,8 @@
     "react-docgen-typescript-loader": "^3.7.2",
     "redux-form-storybook": "^1.0.2",
     "storybook-addon-deps": "^2.0.1",
-    "ts-loader": "^7.0.5"
+    "ts-loader": "^7.0.5",
+    "webpack-bundle-analyzer": "^3.8.0"
   },
   "husky": {
     "hooks": {
