--- a/frontend/package.json
+++ b/frontend/package.json
@@ -115,6 +115,7 @@
     "@storybook/design-system": "^5.1.0",
     "@storybook/preset-create-react-app": "^3.1.2",
     "@storybook/react": "^5.3.19",
+    "@types/react-table": "^7.0.22",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "event-emitter": "^0.3.5",
