--- a/kalm-install-kalmoperatorconfig.yaml
+++ b/kalm-install-kalmoperatorconfig.yaml
@@ -8,6 +8,11 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: kalm-operator
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: kalm-system
   labels:
     istio-injection: enabled
     kalm-enabled: "true"
