--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,7 +35,6 @@
     "chart.js": "^2.9.3",
     "connected-react-router": "^6.8.0",
     "copy-to-clipboard": "^3.3.1",
-    "customize-cra": "^1.0.0",
     "date-fns": "^2.11.1",
     "debug": "^4.1.1",
     "driver.js": "^0.9.8",
@@ -45,17 +44,14 @@
     "formik": "^2.1.5",
     "hoist-non-react-statics": "^3.3.2",
     "immutable": "^4.0.0-rc.12",
-    "install": "^0.13.0",
     "material-table": "^1.57.2",
     "material-ui-popup-state": "^1.6.1",
     "node-forge": "^0.9.1",
     "notistack": "^0.9.7",
-    "npm": "^6.13.7",
     "perfect-scrollbar": "^1.5.0",
     "qs": "^6.9.4",
     "react": "^16.12.0",
     "react-ace": "^8.0.0",
-    "react-app-rewired": "^2.1.6",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
@@ -68,7 +64,6 @@
     "redux-form": "^8.2.6",
     "redux-immutable": "^4.0.0",
     "redux-logger": "^3.0.6",
-    "redux-promise-middleware": "^6.1.2",
     "redux-thunk": "^2.3.0",
     "redux-thunk-error-handler": "^1.1.4",
     "typescript": "^3.7.4",
@@ -88,16 +83,8 @@
     "build-storybook": "NODE_ENV=test build-storybook --docs -s public"
   },
   "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "production": [">0.2%", "not dead", "not op_mini all"],
+    "development": ["last 1 chrome version", "last 1 firefox version", "last 1 safari version"]
   },
   "jest": {
     "moduleNameMapper": {
@@ -123,11 +110,15 @@
     "@storybook/preset-create-react-app": "^3.1.2",
     "@storybook/react": "^5.3.19",
     "@types/react-table": "^7.0.22",
+    "babel-plugin-date-fns": "^2.0.0",
+    "babel-plugin-transform-imports": "^2.0.0",
+    "customize-cra": "^1.0.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "event-emitter": "^0.3.5",
     "husky": "^4.2.1",
     "prettier": "^2.0.5",
+    "react-app-rewired": "^2.1.6",
     "react-docgen-typescript-loader": "^3.7.2",
     "redux-form-storybook": "^1.0.2",
     "storybook-addon-deps": "^2.0.1",
