--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,6 +69,12 @@ jobs:
           command: |
             echo "$QUAYIO_PASS" | docker login -u "$QUAYIO_USERNAME" --password-stdin quay.io
             docker push $IMAGE_NAME:latest
+            
+            TAG=$(git tag --points-at HEAD)
+            if [ $TAG != "" ]
+            then 
+              docker push $IMAGE_NAME:$TAG
+            fi
   test-controller:
     docker:
       - image: circleci/golang:1.13.11
@@ -203,7 +209,7 @@ workflows:
             branches:
               only:
                 - master
-                - orb
+                - kalm-tag
       - push-dashboard-image:
           context: kalm-ci
           requires:
@@ -213,7 +219,7 @@ workflows:
             branches:
               only:
                 - master
-                - orb
+                - kalm-tag
       - deploy-dashboard:
           context: deploy-demo-cluster
           requires:
