--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -231,6 +231,9 @@ workflows:
               only:
                 - master
                 - kalm-tag
+            filters:
+              tags:
+                only: /^v.*/
       - push-dashboard-image:
           context: kalm-ci
           requires:
@@ -241,6 +244,9 @@ workflows:
               only:
                 - master
                 - kalm-tag
+            filters:
+              tags:
+                only: /^v.*/
       - deploy-dashboard:
           context: deploy-demo-cluster
           requires:
