--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,8 +34,6 @@ jobs:
           working_directory: ./api
           command: bash <(curl -s https://codecov.io/bash)
   build-dashboard-image:
-    environment:
-      IMAGE_NAME: quay.io/kalmhq/kalm
     docker:
       - image: circleci/buildpack-deps:stretch
     steps:
@@ -44,41 +42,36 @@ jobs:
       - run: cd api
       - run:
           name: Build Docker image
-          command: docker build -t $IMAGE_NAME:latest .
+          command: docker build -t kalmhq/kalm:latest .
       - run:
           name: Archive Docker image
-          command: docker save -o image.tar $IMAGE_NAME
+          command: docker save -o image.tar kalmhq/kalm:latest
       - persist_to_workspace:
           root: .
           paths:
             - ./image.tar
   push-dashboard-image:
-    environment:
-      IMAGE_NAME: quay.io/kalmhq/kalm
     docker:
       - image: circleci/buildpack-deps:stretch
     steps:
       - attach_workspace:
           at: /tmp/workspace
       - setup_remote_docker
+      - checkout
       - run:
           name: Load archived Docker image
           command: docker load -i /tmp/workspace/image.tar
       - run:
-          name: Publish Docker Image to Docker Hub
+          name: Publish Docker Image to DOCKER HUB
           command: |
-            echo "$QUAYIO_PASS" | docker login -u "$QUAYIO_USERNAME" --password-stdin quay.io
-            docker push $IMAGE_NAME:latest
-      - checkout
-      - run:
-          name: use Tag for img if exist 
-          command: |     
+            echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
+            docker push kalmhq/kalm:latest
             TAG=$(git tag --points-at HEAD)
-            
+
             if [ "$TAG" != "" ]
-            then 
-              docker tag $IMAGE_NAME:latest $IMAGE_NAME:$TAG
-              docker push $IMAGE_NAME:$TAG
+            then
+              docker tag kalmhq/kalm:latest kalmhq/kalm:$TAG
+              docker push kalmhq/kalm:$TAG
             fi
   test-controller:
     docker:
@@ -111,8 +104,6 @@ jobs:
           working_directory: ./controller
           command: bash <(curl -s https://codecov.io/bash)
   build-push-controller-image:
-    environment:
-      IMAGE_NAME: quay.io/kalmhq/kalm-controller
     docker:
       - image: circleci/golang:1.13.11
     steps:
@@ -121,25 +112,20 @@ jobs:
       - run:
           name: Build Docker image
           working_directory: ./controller
-          command: docker build -t $IMAGE_NAME:latest .
+          command: docker build -t kalmhq/kalm-controller:latest .
       - run:
-          name: Publish Docker Image to Docker Hub
-          working_directory: ./controller
+          name: Publish Docker Image to DOCKER HUB
           command: |
-            echo "$QUAYIO_PASS" | docker login -u "$QUAYIO_USERNAME" --password-stdin quay.io
-            docker push $IMAGE_NAME:latest
-
+            echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
+            docker push kalmhq/kalm-controller:latest
             TAG=$(git tag --points-at HEAD)
-            echo "tag: $TAG"
 
             if [ "$TAG" != "" ]
-            then 
-              docker tag $IMAGE_NAME:latest $IMAGE_NAME:$TAG
-              docker push $IMAGE_NAME:$TAG
+            then
+              docker tag kalmhq/kalm-controller:latest kalmhq/kalm-controller:$TAG
+              docker push kalmhq/kalm-controller:$TAG
             fi
   build-push-operator-image:
-    environment:
-      IMAGE_NAME: quay.io/kalmhq/kalm-operator
     docker:
       - image: circleci/golang:1.13.11
     steps:
@@ -152,19 +138,19 @@ jobs:
       - run:
           name: Build Docker image
           working_directory: ./operator
-          command: docker build -t $IMAGE_NAME:latest .
+          command: docker build -t kalmhq/kalm-operator:latest .
       - run:
           name: Publish Docker Image to Docker Hub
           working_directory: ./operator
           command: |
             echo "$QUAYIO_PASS" | docker login -u "$QUAYIO_USERNAME" --password-stdin quay.io
-            docker push $IMAGE_NAME:latest
+            docker push kalmhq/kalm-operator:latest
 
             TAG=$(git tag --points-at HEAD)
             if [ "$TAG" != "" ]
-            then 
-              docker tag $IMAGE_NAME:latest $IMAGE_NAME:$TAG
-              docker push $IMAGE_NAME:$TAG
+            then
+              docker tag kalmhq/kalm-operator:latest kalmhq/kalm-operator:$TAG
+              docker push kalmhq/kalm-operator:$TAG
             fi
   deploy-dashboard:
     executor: deploy-orb/default
@@ -231,6 +217,7 @@ workflows:
               only:
                 - master
                 - kalm-tag
+                - switch-from-quay-to-docker-hub
             tags:
               only: /^v.*/
       - push-dashboard-image:
@@ -243,6 +230,7 @@ workflows:
               only:
                 - master
                 - kalm-tag
+                - switch-from-quay-to-docker-hub
             tags:
               only: /^v.*/
       - deploy-dashboard:
@@ -270,9 +258,10 @@ workflows:
             - test-controller
           filters:
             branches:
-              only: 
+              only:
                 - master
                 - kalm-tag
+                - switch-from-quay-to-docker-hub
             tags:
               only: /^v.*/
       - deploy-controller:
@@ -281,16 +270,17 @@ workflows:
             - build-push-controller-image
           filters:
             branches:
-              only: master  
+              only: master
   operator:
     jobs:
       - build-push-operator-image:
           context: kalm-ci
           filters:
             branches:
-              only: 
+              only:
                 - master
                 - kalm-tag
+                - switch-from-quay-to-docker-hub
             tags:
               only: /^v.*/
       - deploy-operator:
