add labels and annotation for component

--- a/controller/config/crd/bases/core.kalm.dev_components.yaml
+++ b/controller/config/crd/bases/core.kalm.dev_components.yaml
@@ -45,6 +45,16 @@ spec:
         spec:
           description: ComponentSpec defines the desired state of Component
           properties:
+            Annotations:
+              additionalProperties:
+                type: string
+              description: labels will add to pods
+              type: object
+            Labels:
+              additionalProperties:
+                type: string
+              description: labels will add to pods
+              type: object
             afterStart:
               items:
                 type: string
