--- a/controller/config/crd/bases/core.kalm.dev_componenttemplates.yaml
+++ b/controller/config/crd/bases/core.kalm.dev_componenttemplates.yaml
@@ -75,6 +75,7 @@ spec:
                     - external
                     - linked
                     - fieldref
+                    - builtin
                     type: string
                   value:
                     type: string
