refactor kalm auth-proxy traffic model
Webhook port is removed. A new attribute of ProtectedEndpoint CRD is added called AllowItToPassIfHasBearerToken.
Request with bearer token can bypass auth-proxy check if the flag is set to true in the protectedEndpoint setting.
Kalm will has this flag when a user try to setup cluster.

--- a/controller/config/crd/bases/core.kalm.dev_protectedendpoints.yaml
+++ b/controller/config/crd/bases/core.kalm.dev_protectedendpoints.yaml
@@ -39,6 +39,12 @@ spec:
         spec:
           description: ProtectedEndpointSpec defines the desired state of ProtectedEndpoint
           properties:
+            allowToPassIfHasBearerToken:
+              description: Allow auth proxy to let the request pass if it has bearer
+                token. This flag should be set carefully. Please make sure that the
+                upstream can handle the token correctly. Otherwise, client can bypass
+                kalm sso by sending a not empty bearer token.
+              type: boolean
             groups:
               items:
                 type: string
