--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,7 +12,7 @@ jobs:
     name: A job to deploy new Kalm Component
     steps:
       - name: Use Deploy Action
-        uses: kalmhq/kalm-deploy-action@v0.0.2 # Uses public action
+        uses: kalmhq/kalm-deploy-action@v0.0.3
         id: deploy
         with:
           KALM_API_ADDRESS: ${{ secrets.KALM_API_ADDRESS }}
@@ -21,4 +21,4 @@ jobs:
           KALM_COMPONENT: kalm
           KALM_COMPONENT_IMG_TAG: latest
       - name: output of step deploy
-        run: echo 'The callback response was ${{ steps.deploy.outputs.resp }}.'  
+        run: echo 'The callback response was ${{ steps.deploy.outputs.resp }}.'
