--- a/controller/config/crd/bases/core.kalm.dev_httpscertissuers.yaml
+++ b/controller/config/crd/bases/core.kalm.dev_httpscertissuers.yaml
@@ -50,6 +50,33 @@ spec:
               type: object
             caForTest:
               type: object
+            dns01:
+              properties:
+                configs:
+                  additionalProperties:
+                    properties:
+                      allowfrom:
+                        items:
+                          type: string
+                        type: array
+                      fulldomain:
+                        type: string
+                      password:
+                        type: string
+                      subdomain:
+                        type: string
+                      username:
+                        type: string
+                    required:
+                    - fulldomain
+                    - password
+                    - subdomain
+                    - username
+                    type: object
+                  type: object
+              required:
+              - configs
+              type: object
             http01:
               properties:
                 email:
