--- a/controller/config/rbac/role.yaml
+++ b/controller/config/rbac/role.yaml
@@ -196,6 +196,26 @@ rules:
 - apiGroups:
   - core.kalm.dev
   resources:
+  - acmeservers
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - core.kalm.dev
+  resources:
+  - acmeservers/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - core.kalm.dev
+  resources:
   - applications
   verbs:
   - get
