--- a/controller/config/samples/core_v1alpha1_acmeserver.yaml
+++ b/controller/config/samples/core_v1alpha1_acmeserver.yaml
@@ -3,5 +3,5 @@ kind: ACMEServer
 metadata:
   name: acmeserver-sample
 spec:
-  # Add fields here
-  foo: bar
+  acmeDomain: acme.example.com
+  nsDomain: name-server.example.com
